--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box
+}
+
 nav {
     background-color: #3D3D3D;
     padding: 25px;
@@ -5,26 +9,54 @@ nav {
     text-align: center;
 }
 
-.search-column {
-    background-color: #E8E8E8;
+/* .search-column {
     margin: auto;
-    padding-bottom: 500px;
-}
+} */
 
 .search {
     font-size: 2rem;
     margin-bottom: 0;
-    color: black;
+    color: #3D3D3D;
     font-weight: 800;
+}
+
+.search-history {
+    margin: auto;
+}
+
+.card-title {
+    font-weight: 800;
+    font-size: 2rem;
+    color: #3D3D3D;
+}
+
+.current-conditions {
+    border-style: solid;
+    border-color: #3D3D3D;
+    border-width: 2px;
+    padding: 14px;
+    margin: 10px;
+}
+
+li {
+    color: #3D3D3D;
+    font-size: 1.75rem;
 }
 
 .search-btn {
     padding: 5px;
+    width: 100%;
+    margin-top: 5px;
 }
 
-.recent-search-btn {
+.form-input {
+    width: 100%;
+}
+
+.btn {
+    width: 100%;
+    margin-top: 8px;
     padding: 5px;
-    margin: 5px;
 }
 
 .uv-favorable{
@@ -43,4 +75,13 @@ nav {
     background-color: red;
     border-radius: 5px;
     color: white;
+}
+
+.day {
+    border-style: solid;
+    border-color: #3D3D3D;
+    border-width: 2px;
+    width: 175px;
+    height: 300px;
+    
 }
